tests/snippets/invalid_snippets/unsupported_language.snippet
<!unknown_language
  (
    "log",
    "Logs a Message to the console",
    ```console.log("Hello world")```
  )
  (
    "logerr",
    "Logs an Error Message to the console",
    ```console.error("This is an Error")```
  )
>

